# arguebuf-python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  conftest.py  default.nix  dvc_test.py  flake.nix  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: black.yml  ci.yml  dvc.yml  release.yml
arguebuf/: __init__.py  aif.py  data.py  dt.py  edge.py  graph.py  node.py  traverse.py  utils.py
arguebuf/cli/: __main__.py  app.py  graph.py  graph_translator.py  model.py  server.py  text.py  translator.py
arguebuf/converters/: __init__.py  argdown.py  config.py  copy.py  from_aif.py  from_aml.py  from_argdown.py  from_brat.py  from_casebase.py  from_dict.py  from_io.py  from_json.py  from_kialo.py  from_microtexts.py  from_ova.py  from_path.py  from_protobuf.py  from_sadface.py  graphviz.py  microtexts.py  to_aif.py  to_dict.py  to_graphviz.py  to_io.py  to_json.py  to_networkx.py  to_path.py  to_protobuf.py
arguebuf/dump/: __init__.py  _config.py  _dump_aif.py  _dump_d2.py  _dump_dict.py  _dump_graphviz.py  _dump_io.py  _dump_json.py  _dump_networkx.py  _dump_path.py  _dump_protobuf.py  _dump_xaif.py  config.py  dump_aif.py  dump_dict.py  dump_io.py  dump_json.py  dump_networkx.py  dump_path.py
arguebuf/load/: __init__.py  _config.py  _load_aif.py  _load_aml.py  _load_argdown.py  _load_brat.py  _load_casebase.py  _load_dict.py  _load_io.py  _load_json.py  _load_kialo.py  _load_microtexts.py  _load_ova.py  _load_path.py  _load_protobuf.py  _load_sadface.py  _load_text.py  _load_xaif.py  _preprocess_aif.py  config.py  load_aif.py  load_aml.py  load_argdown.py  load_brat.py  load_casebase.py  load_dict.py  load_io.py  load_json.py  load_kialo.py  load_microtexts.py  load_ova.py  load_path.py  load_protobuf.py  load_sadface.py
arguebuf/load/preprocess/: preprocess_aif.py
arguebuf/model/: __init__.py  analyst.py  edge.py  graph.py  metadata.py  node.py  participant.py  reference.py  resource.py  scheme.py  typing.py  userdata.py  utils.py
arguebuf/models/: __init__.py  analyst.py  edge.py  graph.py  metadata.py  node.py  participant.py  reference.py  resource.py  scheme.py  typing.py  userdata.py
arguebuf/render/: __init__.py  _render_d2.py  _render_graphviz.py  render_graphviz.py
arguebuf/schema/: aml.py  argdown_json.py  graphviz.py  microtexts.py  ova.py  sadface.py  xaif.py
arguebuf/schemas/: __init__.py  aif.py  argdown.py  d2.py  graphviz.py  microtexts.py  ova.py  xaif.py
arguebuf/services/: __init__.py  loader.py  traversal.py  utils.py
argument_graph/: __init__.py  analysis.py  dt.py  edge.py  graph.py  node.py  utils.py
data/: .gitignore  6064-original.json  6064-reconstructed.json  arguebase-private.dvc  arguebase-public.dvc  arguebase.dvc
docs/: api.md  conf.py  index.md  index.rst
docs/source/: modules.md  modules.rst  recap_argument_graph.rst
mkdocs/: api.md  index.md
mkdocs/api/: graph.md
recap_argument_graph/: __init__.py  analysis.py  edge.py  graph.py  node.py  utils.py
src/arguebuf/: __init__.py  traverse.py  utils.py
src/arguebuf/cli/: app.py  model.py  server.py  translator.py
src/arguebuf/dump/: __init__.py  _config.py  _dump_dict.py  _dump_graphviz.py  _dump_json.py  _dump_xaif.py
src/arguebuf/load/: _load_aif.py  _load_argdown.py  _load_brat.py  _load_dict.py  _load_io.py  _load_kialo.py  _load_sadface.py  _load_xaif.py
src/arguebuf/model/: node.py  resource.py  scheme.py
src/arguebuf/render/: _render_graphviz.py
src/arguebuf/schemas/: aif.py  argdown.py  d2.py  graphviz.py  microtexts.py  ova.py  sadface.py
tests/: test_analysis.py  test_converters.py  test_create_graph.py  test_edge.py  test_graph.py  test_load_casebase.py  test_load_edge.py  test_load_node.py  test_node.py  test_preprocess_dialog.py  test_render_graph.py  try.py
tests/data/: .gitignore  kialo.dvc  recap.dvc
