[tool.poetry]
name = "arguebuf"
version = "2.1.2"
description = "Create and analyze argument graphs and serialize them via Protobuf"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/recap-utr/arguebuf-python"
documentation = "https://arguebuf.readthedocs.io/en/latest"
packages = [{ include = "arguebuf" }]

[tool.poetry.scripts]
arguebuf = "arguebuf.cli.app:cli"

[tool.poetry.dependencies]
python = "^3.9"
arg-services = "^1.4"
networkx = ">=2.8, <4.0"
pendulum = "^2.1"
graphviz = "^0.20"
lxml = "^4.9"
typer = { version = "^0.9", extras = ["all"], optional = true }
deepl = { version = "^1.15", optional = true }
pygraphviz = { version = "^1.11", optional = true }
multimethod = { version = "^1.10", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-xdist = "^3.3"
deepdiff = { version = "^6.6", extras = ["murmur"] }
lxml-stubs = "^0.4"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.1"

[tool.poetry.extras]
cli = ["typer", "deepl", "multimethod"]
graphviz = ["pygraphviz"]

[tool.pytest.ini_options]
addopts = "--numprocesses 4 --dist load --cov arguebuf --cov-report term-missing --doctest-modules --ignore arguebuf/cli --ignore data --ignore result"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
target-version = "py39"
select = ["B", "E", "F", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"arguebuf/cli/*.py" = ["B008"]
"arguebuf/model/node.py" = ["B027"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
