[project]
name = "arguebuf"
version = "2.7.2"
description = "Create and analyze argument graphs and serialize them via Protobuf"
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arg-services>=1,<2",
    "networkx>=3,<4",
    "pendulum>=3,<4",
    "graphviz>=0.20,<1",
    "lxml>=5,<6",
]

[project.optional-dependencies]
all = ["arguebuf[cli,graphviz]"]
cli = ["typer>=0.9,<1", "deepl>=1,<2"]
graphviz = ["pygraphviz>=1,<2"]

[project.scripts]
arguebuf = "arguebuf.cli.app:cli"

[project.urls]
Repository = "https://github.com/recap-utr/arguebuf-python"
Documentation = "https://arguebuf.readthedocs.io"
Issues = "https://github.com/recap-utr/arguebuf-python/issues"
Changelog = "https://github.com/recap-utr/arguebuf-python/releases"

[dependency-groups]
test = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "pytest-xdist>=3,<4",
    "deepdiff>=8,<9",
    "lxml-stubs>=0.5,<1",
]
docs = ["pdoc>=15,<16"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--numprocesses 4 --dist load --cov arguebuf --cov-report term-missing --doctest-modules --ignore arguebuf/cli --ignore data --ignore result"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
default-groups = ["test", "docs"]
